--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+*.pth
+*.pt
+models/
 
 # Installer logs
 pip-log.txt
